# mast-remarkable

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: current.json  weather.json
src/: battery.rs  common.rs  control.rs  lib.rs  main.rs  refresh.rs  weather.rs  wifi.rs
