[package]
name = "mast_remarkable"
version = "0.1.0"
authors = ["theoxao <theoxao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable="0.4.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
easy-http-request="0.2.9"
chrono = "0.4"
log = "0.4.8"
env_logger = "0.7.1"
evdev = "0.10.1"
openssl = { version = "0.10", features = ["vendored"] }